Refactor HTML structure and update CSS for main layout; add new section for Zimbabwe and adjust flex properties

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </div>
   </header>  
   
+
   <main>
     <section class="flex-container">
       <div class="course-work">
@@ -43,7 +44,9 @@
           <li>Course 3</li>
         </ul>       
       </div>
-      
+    </section>
+
+    <section class="flex-container">
       <div class="zimbabwe">
         <h2>Matabeleland North, Zimbabwe</h2>
         <div>
