Update profile image format and adjust CSS height for profile image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <div class="profile">
-      <img src="images/profile.jpg" alt="Shaniah Millian Nyabawa" class="profile-img">
+      <img src="images/profile.webp" alt="Shaniah Millian Nyabawa" class="profile-img">
       <h1>Shaniah M. Nyabawa</h1>
     </div>
     <div class="navbar-container">
@@ -33,7 +33,6 @@
     </div>
   </header>  
   
-
   <main>
     <section class="flex-container">
       <div class="course-work">
@@ -56,7 +55,7 @@
           </figure>
         </div>
         
-      </div>
+      </div> 
     </section>
     
     <section class="certificate">
