Update image format for Victoria Falls in HTML to WebP for better performance

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h2>Matabeleland North, Zimbabwe</h2>
         <div>
           <figure>
-            <img src="images/victoria_falls.jpg" alt="victoria falls">
+            <img src="images/victoria_falls.webp" alt="victoria falls">
             <figcaption>Victoria Falls</figcaption>
           </figure>
         </div>
