--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -13,12 +13,18 @@
     <meta property="og:image" content="https://yourwebsite.com/images/logo.png">
     <meta property="og:url" content="https://your-github-username.github.io/wdd231/chamber/directory.html">
 
+    <!-- favicon links-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
     <link rel="stylesheet" href="styles/styles.css">
-    <script src="script/scripts.js" defer></script>
+    <script src="scripts/script.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Rusape Chamber of Commerce</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -26,13 +32,14 @@
             </ul>
         </nav>
     </header>
-
+    
     <main>
+        <h1>Rusape Chamber of Commerce</h1>
         <h2>Business Directory</h2>
         <button id="gridView">Grid View</button>
         <button id="listView">List View</button>
         <section id="directory" class="grid"></section>
-    </main>
+    </main>    
 
     <footer>
         <p>&copy; <span id="year"></span> Rusape Chamber of Commerce</p>
