Update Open Graph meta tags in directory.html for improved SEO and link sharing

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -10,8 +10,8 @@
     <!-- Facebook Meta Tags -->
     <meta property="og:title" content="Rusape Chamber Directory">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://yourwebsite.com/images/logo.png">
-    <meta property="og:url" content="https://your-github-username.github.io/wdd231/chamber/directory.html">
+    <meta property="og:image" content="https://shaniahsrusapechamberdirectory.com/images/logo.png">
+    <meta property="og:url" content="https://ShaniahBytesBack.github.io/wdd231/chamber/directory.html">
 
     <!-- favicon links-->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -26,10 +26,8 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="directory.html">Directory</a></li>
-            </ul>
+            <a href="index.html">Home</a>
+            <a href="directory.html">Directory</a>
         </nav>
     </header>
     
