Refactor HTML and CSS for improved structure and consistency; add main heading to directory page

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -2,25 +2,25 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Salt Lake City Chamber of Commerce Member Directory" />
-  <meta name="author" content="Shaniah Nyabawa" />
-  <meta property="og:title" content="Salt Lake City Chamber of Commerce" />
-  <meta property="og:description" content="Discover and connect with local businesses in Salt Lake City." />
-  <meta property="og:image" content="images/og-image.jpg" />
-  <meta property="og:url" content="https://yourusername.github.io/wdd231/chamber/directory.html" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Salt Lake City Chamber of Commerce Member Directory">
+  <meta name="author" content="Shaniah Nyabawa">
+  <meta property="og:title" content="Salt Lake City Chamber of Commerce">
+  <meta property="og:description" content="Discover and connect with local businesses in Salt Lake City.">
+  <meta property="og:image" content="images/og-image.jpg">
+  <meta property="og:url" content="https://yourusername.github.io/wdd231/chamber/directory.html">
   <title>Salt Lake City Chamber | Directory</title>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
 
-  <link rel="stylesheet" href="styles/normalize.css" />
-  <link rel="stylesheet" href="styles/main.css" />
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/main.css">
   <script defer src="scripts/directory.js"></script>
 
-  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet">
 
 </head>
 
@@ -45,6 +45,7 @@
   </header>
 
   <main>
+    <h1>Home</h1>
     <section class="info-grid">
       <div id="events">
         <h2>Events</h2>
@@ -74,7 +75,7 @@
       <p>
       <br>10 Rue De La Paix<br>Salt Lake, Mali 999</p>
       
-      <a href="mailto: info@saltlakecc.org">
+      <a href="mailto:info@saltlakecc.org">
         <i class="ri-mail-fill"></i>
         info@saltlakecc.org
       </a>
