Add visually hidden heading for member directory and style adjustments for main heading

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -65,7 +65,7 @@
     </section>
 
     <section class="business-cards" id="members">
-      
+      <h2 class="visually-hidden">Member Directory</h2>
     </section>
   </main>
 
