Update navigation links for correct relative paths in directory and index pages

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <i class="ri-menu-line"></i>
       </div>
       <nav class="navbar">
-        <a href="#" class="active">Home</a>
-        <a href="#">Chamber</a>
-        <a href="#">GitHub Profile</a>
-        <a href="#">LinkedIn</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="chamber/directory.html">Chamber</a>
+        <a href="https://github.com/ShaniahBytesBack">GitHub Profile</a>
+        <a href="https://www.linkedin.com/in/shaniah-nyabawa/">LinkedIn</a>
       </nav>
     </div>
   </header>  
