--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -35,7 +35,7 @@
           <i class="ri-menu-line"></i>
         </button>
         <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="directory.html">Directory</a></li>
           <li><a href="#">Join</a></li>
           <li><a href="#">Discover</a></li>
