Add hero section with welcome message and call-to-action button; update styles for improved layout

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -45,6 +45,14 @@
   </header>
 
   <main>
+    <section class="hero">
+      <img src="images/hero.jpg" alt="Salt Lake City Chamber Hero Image">
+      <div class="hero-text">
+        <h2>Welcome to the Salt Lake City Chamber of Commerce</h2>
+        <p>Connecting local businesses and fostering community growth.</p>
+        <a href="#members" class="cta-button">Keynote Tickets</a>
+      </div>
+    </section>
     <h1>Home</h1>
     <section class="info-grid">
       <div id="events">
@@ -76,8 +84,8 @@
       <br>10 Rue De La Paix<br>Salt Lake, Mali 999</p>
       
       <a href="mailto:info@saltlakecc.org">
-        <i class="ri-mail-fill"></i>
-        info@saltlakecc.org
+        <i class="ri-mail-fill" aria-hidden="true"></i>
+        <span class="visually-hidden">Email: </span>info@saltlakecc.org
       </a>
       <a href="tel:+1234567890">
         <i class="ri-phone-fill"></i>
