--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <nav class="navbar">
         <a href="index.html" class="active">Home</a>
-        <a href="chamber/directory.html">Chamber</a>
+        <a href="chamber/index.html">Chamber</a>
         <a href="https://github.com/ShaniahBytesBack">GitHub Profile</a>
         <a href="https://www.linkedin.com/in/shaniah-nyabawa/">LinkedIn</a>
       </nav>
