Highlight active navigation link for improved user experience; update join page metadata and favicon

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Join the Salt Lake City Chamber of Commerce. Connect, grow, and discover local business opportunities and events.">
   <meta name="author" content="Shaniah Nyabawa">
+  <link rel="icon" href="images/favicon-32x32.png">
   <meta property="og:title" content="Salt Lake City Chamber of Commerce">
-  <meta property="og:description" content="Discover and connect with local businesses in Salt Lake City.">
+  <meta property="og:description" content="Discover and connect with local businesses in Salt Lake City. Join the Chamber to access exclusive events, resources, and networking opportunities.">
   <meta property="og:image" content="images/og-image.jpg">
   <meta property="og:url" content="https://yourusername.github.io/wdd231/chamber/join.html">
   <title>Join | Salt Lake City Chamber of Commerce</title>
