--- a/chamber/index.html
+++ b/chamber/index.html
@@ -35,7 +35,7 @@
           <i class="ri-menu-line"></i>
         </button>
         <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li><a href="directory.html">Directory</a></li>
           <li><a href="join.html">Join</a></li>
           <li><a href="#">Discover</a></li>
