Implement back-to-top button functionality and enhance attraction loading error handling; remove unused CSS styles

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -13,13 +13,15 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+
+  <link rel="manifest" href="site.webmanifest">
 
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/discover.css">
   <script defer src="scripts/discover.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet">
+  <link rel="preconnect" href="https://cdn.jsdelivr.net">
 </head>
 <body>
   <header>
@@ -68,9 +70,9 @@
       </a>
     </div>
     <div class="social">
-      <a href="#"><i class="ri-youtube-line"></i></a>
-      <a href="#"><i class="ri-twitter-fill"></i></a>
-      <a href="#"><i class="ri-linkedin-fill"></i></a>
+      <a href="#" aria-label="YouTube"><i class="ri-youtube-line"></i></a>
+      <a href="#" aria-label="Twitter"><i class="ri-twitter-fill"></i></a>
+      <a href="#" aria-label="LinkedIn"><i class="ri-linkedin-fill"></i></a>
     </div>
     <p class="date">
       WDD231 Class Project 
