Fix project link in navigation to point to the correct final project directory

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <nav class="navbar">
         <a href="index.html" class="active">Home</a>
         <a href="chamber/index.html">Chamber</a>
-        <a href="project/index.html">Project</a>
+        <a href="finalproject/index.html">Project</a>
         <a href="https://github.com/ShaniahBytesBack">GitHub Profile</a>
         <a href="https://www.linkedin.com/in/shaniah-nyabawa/">LinkedIn</a>
       </nav>
